@@ -850,6 +850,12 @@ or several C<param=value> pairs separated by semicolon (;).
 Parameters defined in C<RFC2863_IF_MIB::copy-params> may override
 the ones defined in this action.
 
+=item * C<InBytesParameters>, C<OutBytesParameters>
+
+Analagous to C<Parameters>, but the parameters are applied to InBytes and
+OutBytes leaves of the selected interface.
+
+
 =item * C<DocsisUpSNRMonitor>
 
 For a DOCSIS CMTS, this action assigns a new  monitor to the upstream
