@@ -1,5 +1,8 @@
 2008-03-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
+	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
+	New selectors: InBytesParameters, OutBytesParameters
+
 	* perllib/Torrus/DevDiscover.pm (buildConfig):
 	New discovery parameter: include-files
 
